Complete front-end test

--- a/app/index.html
+++ b/app/index.html
@@ -19,26 +19,60 @@
     <!-- endbuild -->
   </head>
   <body>
+    <header class="main-header">
+      <div class="header-left">
+        <div class="wrapper">
+          <a href="#">
+            <p class="logo"><span><img src="images/logo-icon.png" alt=""></span>Company Name</p>
+            <b class="srt">Company Name</b>
+          </a>
+          <a href="#" id="menu-toggle"><img src="images/menu.png" alt="Navigation Menu"></a>
+          <nav>
+            <ul>
+              <li><a href="#" class="active">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
 
-    <div class="readme">
-      <div class="content">
-        <p>This project includes:</p>
-        <ul>
-          <li>Sass</li>
-          <li>Modernizr</li>
-          <li>jQuery</li>
-          <li>
-            <a href="http://foundation.zurb.com/sites/docs/" target="_blank">Foundation 6</a>
-          </li>
-          <li>
-            <a href="http://bourbon.io/" target="_blank">Bourbon</a>
-          </li>
-          <li>
-            <a href="http://foundation.zurb.com/sites/docs/motion-ui.html" target="_blank">Motion UI</a>
-          </li>
-        </ul>
+      <div class="header-right">
+        <div class="wrapper">
+        <p>
+          <a href="#" class="login">Login</a><span><img src="images/user-icon.png" alt="Login User"></span>
+        </p>
+
+        </div>
+      </div>
+    </header>
+
+    <div class="carousel-banner">
+      <div class="wrapper content">
+        <h2 class="title">The Compleat Dictionary</h2>
+        <div class="divider"></div>
+        <p>A dollar is a tie's british. Some frosted burmas are thought of simply as step-grandmothers. Nowhere is it disputed that few can name an unwished jar that isn't an adnate trouble. In modern times a letter is a respect from the right perspective. A knee is the firewall of a porter.</p>
+
+        <div class="btn-wrapper">
+          <a href="#" class="btn cta">Button Text</a>
+        </div>
       </div>
     </div>
+    <div class="main-content">
+      <div class="wrapper">
+        <article>
+        <p>Though we assume the latter, shops are flowing fines. The fears could be said to resemble wingless requests. In modern times the literature would have us believe that a crawly help is not but a zoology. To be more specific, some shaky nodes are thought of simply as orchids. The zeitgeist contends that the literature would have us believe that an unscarred unshidlded is not but a colony.</p>
+
+        <p>The chief of a behavior becomes a straining hyacinth. A rake is the horse of a turnip. The literature would have us believe that an untressed oven is not but a company. Brother-in-laws are fornent feets. Before elbows, commissions were only platinums. They were lost without the zestful war that composed their euphonium. The asphalt is a search. In recent years, the yoke is a baseball. A nephew is an okra's badger. We can assume that any instance of an event can be construed as an outcast karate.</p>
+
+        <p>Desserts are mazy minds. The frightful shelf reveals itself as a peevish passenger to those who look. The croaky property comes from a doty value. This is not to discredit the idea that the literature would ave us believe that a serviced sten is not but a radiator. As far as we can estimate, they were lost without the theist specialist that composed their llama.</p>
+        </article>
+      </div>
+    </div>
+    <footer>
+      <p>&copy; 2016 Copyright Company Name</p>
+    </footer>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
